--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,8 @@
 :root {
 	/* --mr-default: #ff5200;
 	--mr-hover: #fee25f; */
-	--mr-default: #00d9ff;
-	--mr-hover: #7ffe5f;
+	--mr-default: #06752e;
+	--mr-hover: #02c449;
 
 	--mr-default2: #023788;
 	--mr-hover2: #001f4d;
@@ -6340,7 +6340,7 @@ p+.quote-classic {
 .quote-modern-text {
 	font-weight: 300;
 	letter-spacing: .075em;
-	font-style: italic;
+	/* font-style: italic; */
 	text-transform: none;
 	font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial, sans-serif;
 	color: #777777;
@@ -9191,7 +9191,7 @@ hr+.footer-social-list {
 	letter-spacing: .075em;
 	font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial, sans-serif;
 	color: white;
-	background: linear-gradient(to top, #e54d05 0%, #fe5100 100%);
+	background: linear-gradient(to top, var(--mr-hover) 0%, var(--mr-default) 100%);
 	transform: translate3d(140%, -50%, 0);
 	will-change: transform;
 	transition: all .3s ease;
@@ -17725,6 +17725,7 @@ html.rd-navbar-fixed-linked .page {
 
 .swiper-slider-2 .swiper-slide {
 	background-position: 50%;
+	background-size: cover;
 }
 
 .swiper-slider-2 .swiper-title {
